# BarkGuard

./: README.md  pyproject.toml
.github/workflows/: python-app.yaml  python-app.yml
bark_guard/: main.py
bark_guard/bark_recognition/: bark_recognition_factory.py  bark_recognition_interface.py
bark_guard/bark_recognition/impl/: fourier_transformation.py
bark_guard/sound_recorder/: sound_recorder_factory.py  sound_recorder_interface.py
bark_guard/sound_recorder/impl/: sound_recorder_sounddevice.py
bark_guard/web_interface/: main.py
bark_guard_api/bark_recognition/: bark_recognition_factory.py
bark_guard_api/bark_recognition/impl/: bark_recognition_no_implementation.py  fourier_transformation.py
bark_guard_api/database/: __init__.py  auth_token.py  database.db  database.py  session.py
bark_guard_api/database/tables/: tables.py
bark_guard_api/web_interface/: bark_guard_session.py  dependencies.py  main.py
bark_guard_api/web_interface/models/: models.py
bark_guard_api/web_interface/routers/: analysis.py  notifications.py  users.py
bark_guard_app/: README.md
bark_guard_client/: main.py
bark_guard_client/sound_recorder/: sound_recorder_factory.py  sound_recorder_interface.py
bark_guard_client/sound_recorder/impl/: sound_recorder_sounddevice.py
docs/: README.md
frontend-app/: next.config.mjs  package-lock.json
frontend-app/app/: page.tsx
tests/: test_dummy.py
tests/test_sound_recorder/: test_sound_recorder_sounddevice.py
