[tool.poetry]
name = "bark-guard"
version = "0.1.0"
description = "The project will recognize barking and makes action"
authors = ["Lis Przemyslaw <przemyslaw_lis@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "*"
scipy = "*"
wavio = "*"
fastapi = "*"

[tool.poetry.dev-dependencies]
pytest = "^6.2"
ruff = "*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
